# SuperChess

./: .gitignore  CMakeLists.txt  README.md
include/: bitboard.h
include/board/: bitboard.h  fen.h  position.h
include/utils/: debug.h
src/: main.cpp
src/board/: bitboard.cpp  fen.cpp  position.cpp
src/utils/: debug.cpp
